--- a/src/styles.css
+++ b/src/styles.css
@@ -2,28 +2,20 @@
 
 body{
     background: url("https://www.parebem.com.br/wp-content/uploads/2019/01/redes-de-estacionamento.jpg");
-    font-family: Arial;
-    background-size: 100%;
 }
 
-*{
-    padding: 0%;
-    margin: 0%;
-}
 
-a{
-    text-decoration: none;
-    color: black;
-    display: block;
-    padding: 20px 5px;
+#meio{
+    background-color: rgba(54,54,54);
     color: white;
+    width: 70%;
+    height: 75%;
+    top: 10%;
+    bottom: 30%;
+    left: 15%;
+    right: 10%;
+    
+    position:absolute;
+
 }
 
-a:hover{
-    background-color: rgb(176,224,230);
-    color: black;
-}
-
-#lista{
-    position: fixed;
-}
