--- a/src/app/components/cadastros/cadastros.component.html
+++ b/src/app/components/cadastros/cadastros.component.html
@@ -1,43 +1,58 @@
-<section class="transition-fade" id="meio">
-    <div>
-<h3></h3>
+<section id="meio">
+  <h3 style="color: white;">Menu Cadastros</h3>
+  <br>
+  <button [routerLink]="''" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
+    <br><br>
     <div class="row">
-        <div class="col s3 m3">
-          <div   class="card">
-            <div class="card-image">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCqTS1Q-oHI4E1d04I-pgVrhAD5S6l3hsceQ&usqp=CAU">
-              <a routerLink="/cadEmpresa" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-              <span  class="card-title" >Empresas</span>
-            </div> 
+        <div class="col s8 m3"> 
+          <div class="card blue-grey">
+            <div class="card-content white-text">
+              <span class="card-title">Empresas</span>
+            </div>
+          <div class="card-action">
+            <a routerLink="/cadEmpresa">Cadastrar</a>
+            <a routerLink="/listarempresas">Listar</a>
+          </div>
           </div>
         </div>
-        <div  class="col s3 m3">
-            <div class="card">
-              <div class="card-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCqTS1Q-oHI4E1d04I-pgVrhAD5S6l3hsceQ&usqp=CAU">
+
+          <div class="col s8 m3"> 
+            <div class="card blue-grey darken-1">
+              <div class="card-content white-text">
                 <span class="card-title">Estacionamentos</span>
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-              </div>   
+              </div>
+            <div class="card-action">
+              <a href="#">Cadastrar</a>
+              <a href="#">Listar</a>
+            </div>
             </div>
           </div>
-          <div  class="col s3 m3">
-            <div class="card">
-              <div class="card-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCqTS1Q-oHI4E1d04I-pgVrhAD5S6l3hsceQ&usqp=CAU">
+
+          <div class="col s8 m3"> 
+            <div class="card blue-grey darken-1">
+              <div class="card-content white-text">
                 <span class="card-title">Funcionarios</span>
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-              </div>   
+              </div>
+            <div class="card-action">
+              <a href="#">Cadastrar</a>
+              <a href="#">Listar</a>
+            </div>
             </div>
           </div>
-          <div  class="col s3 m3">
-            <div class="card">
-              <div class="card-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQCqTS1Q-oHI4E1d04I-pgVrhAD5S6l3hsceQ&usqp=CAU">
+
+          <div class="col s8 m3"> 
+            <div class="card blue-grey darken-1">
+              <div class="card-content white-text">
                 <span class="card-title">Clientes</span>
-                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-              </div>   
+              </div>
+            <div class="card-action">
+              <a href="#">Cadastrar</a>
+              <a href="#">Listar</a>
+            </div>
             </div>
           </div>
-      </div>
+        
+    
     </div>
+      
 </section>
