--- a/src/styles.css
+++ b/src/styles.css
@@ -6,16 +6,15 @@ body{
 
 
 #meio{
-    background-color: rgba(54,54,54);
-    color: white;
-    width: 70%;
-    height: 75%;
-    top: 10%;
-    bottom: 30%;
-    left: 15%;
-    right: 10%;
+    background-color: rgba(27, 27, 27, 0.5);
+    color: black;
+    width: 100%;
+    height: 91.8%;
+    top: 8.2%;
     
-    position:absolute;
+    position:relative;
 
 }
+
+
 
