--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -1,3 +1,40 @@
 <section id="meio">
-    Aqui vai ser o principal
-</section>
+    <h3 style="color: white;">Menu Cadastros</h3>
+    <br>
+    <button [routerLink]="''" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
+      <br><br>
+      <div class="row">
+          <div class="col s8 m3"> 
+            <div class="card blue-grey">
+              <div class="card-content white-text">
+                <span class="card-action"><a href="#">Novo ticket</a></span>
+              </div>
+            </div>
+          </div>
+         
+          <div class="col s8 m3"> 
+            <div class="card blue-grey">
+              <div class="card-content white-text">
+                <span class="card-action"><a href="#">Consultar ticket</a></span>
+              </div>
+            </div>
+          </div>
+          <div class="col s8 m3"> 
+            <div class="card blue-grey">
+              <div class="card-content white-text">
+                <span class="card-action"><a href="#">Encerrar ticket</a></span>
+              </div>
+            </div>
+          </div>
+  
+  
+            
+  
+  
+           
+          
+      
+      </div>
+        
+  </section>
+  
