--- a/src/app/components/cadastrar-ticket/cadastrar-ticket.component.html
+++ b/src/app/components/cadastrar-ticket/cadastrar-ticket.component.html
@@ -5,33 +5,33 @@
         
           <div class="form-group">
             <div class="row">
-              <div class="col s6 m5">
+              <div class="col s6 m3">
                <label  for="entrada" >Hora Entrada</label>
                 <input  formControlName="entrada" class="form-control" type="time"  name="entrada"  >
               </div>
               <div class="col s6 m3">
-                <label for="cnpj">CNPJ</label>
-                <input formControlName="cnpj" class="form-control" id="cnpj" type="text" name="cnpj" >
+                <label for="tipocliente">Mensalista ?</label>
+                <input formControlName="tipocliente" class="form-control" id="tipocliente" type="checkbox" name="tipocliente" >
+                <div>
+                  <button type = "submit"> sim </button>
+                  <button type = "submit"> nâo </button>
+                </div>
               </div>
             </div>
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col s6 m8">
-                <label for="endereco">Endereco</label>
-                <input formControlName="endereco" class="form-control"  id="endereco" type="text"  name="endereco" >
+              <div class="col s6 m3">
+                <label for="placa">Placa</label>
+                <input formControlName="placa" class="form-control"  id="placa" type="text"  name="placa" >
             </div>
             </div>
           </div>
           <div class="form-group">
             <div class="row">
               <div class="col s6 m5">
-                <label for="email">Email</label> 
-                <input formControlName="email" class="form-control"  id="email" type="email"   name="email">  
-              </div>
-              <div class="col s2 m3">
-                <label for="telefone">Telefone</label>
-                <input formControlName="telefone" class="form-control"  id="telefone" type="text"  name="telefone" >
+                <label for="veiculo">Tipo veiculo</label> 
+                <input formControlName="veiculo" class="form-control"  id="veiculo" type="text"   name="veiculo">  
               </div>
             </div>
           </div>
