--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -15,7 +15,7 @@
           <div class="col s8 m3"> 
             <div class="card blue-grey">
               <div class="card-content white-text">
-                <span class="card-action"><a href="#">Consultar ticket</a></span>
+                <a routerLink="/detalhesticket">Consultar Ticket</a>
               </div>
             </div>
           </div>
