--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -22,7 +22,7 @@
           <div class="col s8 m3"> 
             <div class="card blue-grey">
               <div class="card-content white-text">
-                <span class="card-action"><a href="#">Encerrar ticket</a></span>
+                <span class="card-content"><a href="#">Encerrar ticket</a></span>
               </div>
             </div>
           </div>
