--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="PT-BR ">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <nav id="navbar" style="background-color: rgb(32,178,170);">
   <div class="nav-wrapper">
     <a routerLink="" class="brand-logo center">Home<i id="home" class="material-icons">home</i></a>
@@ -8,5 +12,5 @@
   </div>
 </nav>
 
-
 <router-outlet></router-outlet>
+</html>
