--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -6,7 +6,7 @@
       <div class="row">
           <div class="col s8 m3"> 
             <div class="card blue-grey">
-              <div class="card-content white-text">
+              <div class="card-action white-text">
                 <a routerLink="/cadticket">Abrir Ticket</a>
               </div>
             </div>
@@ -14,15 +14,15 @@
          
           <div class="col s8 m3"> 
             <div class="card blue-grey">
-              <div class="card-content white-text">
+              <div class="card-action white-text">
                 <a routerLink="/detalhesticket">Consultar Ticket</a>
               </div>
             </div>
           </div>
           <div class="col s8 m3"> 
             <div class="card blue-grey">
-              <div class="card-content white-text">
-                <span class="card-content"><a href="#">Encerrar ticket</a></span>
+              <div class="card-action white-text">
+                <span class="card-action"><a href="#">Encerrar ticket</a></span>
               </div>
             </div>
           </div>
