--- a/src/styles.css
+++ b/src/styles.css
@@ -2,18 +2,18 @@
 
 body{
     background: url("https://www.parebem.com.br/wp-content/uploads/2019/01/redes-de-estacionamento.jpg");
+    font-family: 'Times New Roman', Times, serif;
+    
 }
 
 
 #meio{
-    background-color: rgba(27, 27, 27, 0.5);
+    background-color: rgba(3, 3, 3, 0.7);
     color: black;
+    position: absolute;
     width: 100%;
-    height: 91.8%;
-    top: 8.2%;
-    
-    position:relative;
-
+    height: 91.83%;
+    padding: 15px;
 }
 
 
