--- a/src/app/components/detalhes-empresa/detalhes-empresa/detalhes-empresa.component.css
+++ b/src/app/components/detalhes-empresa/detalhes-empresa/detalhes-empresa.component.css
@@ -1,42 +1,30 @@
-
-
-#form{
-    background-color: rgba(54,54,54)
+#myform{
+  
+    width: 80%;
+    left: 10%;
+    right: 50%;
+  
+  position:relative;
 }
 
-
- /* label color */
- .input-field label {
-    color: White;
-  }
-  /* label focus color */
-  .input-field input[type=text]:focus + label {
-    color: white;
-    
-  }
-  /* label underline focus color */
-  .input-field input[type=text]:focus {
-    border-bottom: 1px solid #000;
-    box-shadow: 0 1px 0 0 #000;
-    color: white;
-  }
-  /* valid color */
-  .input-field input[type=text].valid {
-    border-bottom: 1px solid rgb(153, 149, 149);
-    box-shadow: 0 1px 0 0 green;
-    color: white ;
-  }
-  /* invalid color */
-  .input-field input[type=text].invalid {
-    border-bottom: 1px solid rgb(153, 149, 149);
-    box-shadow: 0 1px 0 0 red;
-    color: white;
-  }
-  /* icon prefix focus color */
-  .input-field .prefix.active {
-    color: white;
+  input{
+    color: black;
+    border: 3px solid white;
+    font-weight: 600;
   }
 
-  .col input{
-    color:white;
-  } 
+  label{
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  .form-group .row .col input{
+    border: 3px solid white;
+    background-color: white;
+    border-radius: 5px;
+  }
+
+  button{
+    margin-left: 11px;
+  }
