--- a/src/app/components/list-empresas/list-empresas.component.html
+++ b/src/app/components/list-empresas/list-empresas.component.html
@@ -4,7 +4,7 @@
     <H4 style="color: white; text-align: left;">Lista de Empresas</H4>
     <button [routerLink]="'/cadastros'" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
     <br><br>
-    <section>
+    <section class="lista">
         <table>
             <thead>
               <tr>
