--- a/src/app/components/cadastrar-empresa/cadastrar-empresa.component.css
+++ b/src/app/components/cadastrar-empresa/cadastrar-empresa.component.css
@@ -14,6 +14,7 @@
     color: black;
     border: 3px solid white;
     font-weight: 600;
+    text-transform: uppercase;
   }
 
   label{
@@ -23,7 +24,7 @@
   }
 
   .form-group .row .col input{
-    border: 3px solid white;
+    border: 1px solid white;
     background-color: white;
     border-radius: 5px;
   }
