--- a/src/app/components/cadastrar-empresa/cadastrar-empresa.component.html
+++ b/src/app/components/cadastrar-empresa/cadastrar-empresa.component.html
@@ -27,7 +27,7 @@
             <div class="row">
               <div class="col s6 m5">
                 <label for="email">Email</label> 
-                <input formControlName="email" class="form-control"  id="email" type="email"   name="email">  
+                <input style="text-transform: lowercase;" formControlName="email" class="form-control"  id="email" type="email"   name="email">  
               </div>
               <div class="col s2 m3">
                 <label for="telefone">Telefone</label>
