--- a/src/app/components/cadastros/cadastros.component.html
+++ b/src/app/components/cadastros/cadastros.component.html
@@ -1,8 +1,6 @@
 <section id="meio">
-  <h3 style="color: white;">Menu Cadastros</h3>
-  <br>
-  <button [routerLink]="''" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
-    <br><br>
+    <h3 style="color: white;">Menu Cadastros</h3>
+    <button [routerLink]="''"  id="voltar" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
     <div class="row">
         <div class="col s8 m3"> 
           <div class="card blue-grey">
@@ -22,8 +20,8 @@
                 <span class="card-title">Estacionamentos</span>
               </div>
             <div class="card-action">
-              <a href="#">Cadastrar</a>
-              <a href="#">Listar</a>
+              <a routerLink="/CadEstabelecimento">Cadastrar</a>
+              <a routerLink="/ListEstabelecimentos">Listar</a>
             </div>
             </div>
           </div>
