--- a/src/styles.css
+++ b/src/styles.css
@@ -2,19 +2,22 @@
 
 body{
     background: url("https://www.parebem.com.br/wp-content/uploads/2019/01/redes-de-estacionamento.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
     font-family: 'Times New Roman', Times, serif;
-    
+    padding: 0;
+    margin: 0;
+
 }
 
 
 #meio{
     background-color: rgba(3, 3, 3, 0.7);
     color: black;
-    position: absolute;
     width: 100%;
-    height: 91.83%;
-    padding: 15px;
+    height: 100%;
+    padding: 10px;
 }
-
 
 
