--- a/src/app/components/cadastros/cadastros.component.html
+++ b/src/app/components/cadastros/cadastros.component.html
@@ -32,8 +32,8 @@
                 <span class="card-title">Funcionarios</span>
               </div>
             <div class="card-action">
-              <a href="#">Cadastrar</a>
-              <a href="#">Listar</a>
+              <a routerLink="/CadFuncionario">Cadastrar</a>
+              <a routerLink="/ListFuncionarios">Listar</a>
             </div>
             </div>
           </div>
@@ -44,8 +44,8 @@
                 <span class="card-title">Clientes</span>
               </div>
             <div class="card-action">
-              <a href="#">Cadastrar</a>
-              <a href="#">Listar</a>
+              <a routerLink="/CadCliente">Cadastrar</a>
+              <a routerLink="/ListClientes">Listar</a>
             </div>
             </div>
           </div>
