--- a/src/app/components/cadastros/cadastros.component.css
+++ b/src/app/components/cadastros/cadastros.component.css
@@ -1,8 +1,41 @@
-.row{
-    min-width: 80px;
-    display: block;
-}
+
 
 #voltar{
     left: 11px;
 }
+
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    flex-wrap: wrap;
+    
+}
+
+.card{
+    text-align: center;
+    background-color: rgb(94, 97, 97);
+    color: white;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 700;
+    width: 270px;
+    height: 100px;
+    margin-left: 5px;
+    margin-top: 1px;
+    top: 5px;
+}
+
+.card-action{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+a{
+    border-bottom: 1px solid white;
+}
+
+
+
+ 
