--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
 
-body{
+
+html{
     background: url("https://www.parebem.com.br/wp-content/uploads/2019/01/redes-de-estacionamento.jpg");
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: top center;
     background-size: cover;
-    font-family: 'Times New Roman', Times, serif;
+    font-family:sans-serif;
     padding: 0;
     margin: 0;
 
 }
 
+#navbar{
+    background-color: rgb(32,178,170);
+}
+
 
 #meio{
-    background-color: rgba(3, 3, 3, 0.7);
+    background-color: rgba(3, 3, 3, 0.7);   
     color: black;
     width: 100%;
     height: 100%;
     padding: 10px;
+ 
 }
+
+
+
 
 
