--- a/src/app/components/cadastrar-empresa/cadastrar-empresa.component.css
+++ b/src/app/components/cadastrar-empresa/cadastrar-empresa.component.css
@@ -3,32 +3,56 @@
 
 #myform{
   
-    width: 80%;
-    left: 10%;
-    right: 50%;
+    width: 90%;
+    margin: auto;
   
-  position:relative;
 }
 
-  input{
-    color: black;
-    border: 3px solid white;
-    font-weight: 600;
-    text-transform: uppercase;
+
+  .col{
+    display: flex;
+    flex-direction: column;
+  }
+
+  #endereco, #empresa, #email{
+    width: 280px;
   }
 
   label{
     color: white;
     font-size: 20px;
     font-weight: 700;
+    font-size: 2rem;
   }
 
   .form-group .row .col input{
-    border: 1px solid white;
     background-color: white;
     border-radius: 5px;
+    color: black;
+    border: 3px solid white;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 1.6rem;
   }
 
   button{
     margin-left: 11px;
+  }
+
+  @media (min-width:768px){
+
+    #myform{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start ;
+    }  
+  
+  }
+
+  @media (max-width: 650px){
+
+    .form-group .row .col input{
+      width: 280px;
+    }
+
   }
