--- a/src/app/components/cadastrar-empresa/cadastrar-empresa.component.html
+++ b/src/app/components/cadastrar-empresa/cadastrar-empresa.component.html
@@ -2,39 +2,34 @@
     <H3 style="color: white ; text-align: left;">Cadastrar Empresa</H3>
   <div id="myform">
     <form id="form" method="post" (ngSubmit)="onSubmit()" [formGroup]="formulario">
-        
-          <div class="form-group">
-            <div class="row">
-              <div class="col s6 m5">
-               <label  for="nome" >Empresa</label>
-                <input  formControlName="nome" class="form-control" type="text"  name="nome"  >
-              </div>
-              <div class="col s6 m3">
-                <label for="cnpj">CNPJ</label>
-                <input formControlName="cnpj" class="form-control" id="cnpj" type="text" name="cnpj" >
-              </div>
-            </div>
+      <div class="form-group">
+        <div class="row">
+          <div class="col">
+            <label  for="nome" >Empresa</label>
+            <input  formControlName="nome" class="form-control" type="text" id="empresa" name="nome"  >
           </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col s6 m8">
-                <label for="endereco">Endereco</label>
-                <input formControlName="endereco" class="form-control"  id="endereco" type="text"  name="endereco" >
-            </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="row">
-              <div class="col s6 m5">
-                <label for="email">Email</label> 
-                <input style="text-transform: lowercase;" formControlName="email" class="form-control"  id="email" type="email"   name="email">  
+          <div class="col ">
+            <label for="cnpj">CNPJ</label>
+              <input formControlName="cnpj" class="form-control" id="cnpj" type="text" name="cnpj" >
               </div>
-              <div class="col s2 m3">
-                <label for="telefone">Telefone</label>
-                <input formControlName="telefone" class="form-control"  id="telefone" type="text"  name="telefone" >
-              </div>
-            </div>
+        </div>
+        <div class="row">
+          <div class="col ">
+            <label for="endereco">Endereco</label>
+            <input formControlName="endereco" class="form-control"  id="endereco" type="text"  name="endereco" >
           </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="email">Email</label> 
+            <input style="text-transform: lowercase;" formControlName="email" class="form-control"  id="email" type="email"   name="email">  
+          </div>
+          <div class="col ">
+            <label for="telefone">Telefone</label>
+            <input formControlName="telefone" class="form-control"  id="telefone" type="text"  name="telefone" >
+          </div>
+        </div>
+      </div>
 
         <button [disabled]="formulario.invalid" class="btn btn-primary" type="submit">Gravar
           <i class="material-icons right">check</i>
