--- a/src/app/components/cadastros/cadastros.component.html
+++ b/src/app/components/cadastros/cadastros.component.html
@@ -1,5 +1,5 @@
 <section id="meio">
-    <h3 style="color: white;">Menu Cadastros</h3>
+    <h1 style="color: white;">Menu Cadastros</h1>
     <button [routerLink]="''"  id="voltar" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
     <div class="row">
       <div class="card">
@@ -9,7 +9,7 @@
           <a routerLink="/listarempresas">Listar</a>
         </div>
       </div>
-      <div class="card">
+      <div class="card" hidden>
         <span>Estabelecimento</span>
         <div class="card-action">
           <a routerLink="/CadEstabelecimento">Cadastrar</a>
