--- a/src/styles.css
+++ b/src/styles.css
@@ -7,26 +7,47 @@ html{
     background-position: top center;
     background-size: cover;
     font-family:sans-serif;
-    padding: 0;
+    padding: 0px;
     margin: 0;
+    font-size: 62.5%;
+}
 
+body{
+    font-size:1.6rem;
 }
 
 #navbar{
     background-color: rgb(32,178,170);
 }
 
+ nav div ul li a{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
 
 #meio{
     background-color: rgba(3, 3, 3, 0.7);   
     color: black;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 64px);
+    top: 10%;
     padding: 10px;
  
 }
 
 
+@media (min-width:2560px){
+    html{
+        font-size: 150%;
+    }
+}
 
+@media (max-width:320px){
+    html{
+        font-size: 50%;
+    }
+
+   
+}
 
 
