--- a/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.css
+++ b/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.css
@@ -1,12 +1,11 @@
 
 
 
-#myform{
-  
-    width: 90%;
+ #myform{
+    padding: 10px;
     margin: auto;
-  
-}
+    position: relative;
+ }
 
 
   .col{
