--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,8 @@ html{
 
 body{
     font-size:1.6rem;
+    padding: 0px;
+    margin: 0;
 }
 
 #navbar{
@@ -28,11 +30,7 @@ body{
 #meio{
     background-color: rgba(3, 3, 3, 0.7);   
     color: black;
-    width: 100%;
-    height: calc(100vh - 64px);
-    top: 10%;
-    padding: 10px;
- 
+    padding: 15px;
 }
 
 
