--- a/src/app/components/funcionarios/list-funcionarios/list-funcionarios.component.html
+++ b/src/app/components/funcionarios/list-funcionarios/list-funcionarios.component.html
@@ -1,3 +1,28 @@
-<section id="meio" >
-    
+
+<section id="meio">
+  
+    <H4 style="color: white; text-align: left;">Lista de Empresas</H4>
+    <button [routerLink]="'/cadastros'" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
+    <br><br>
+    <section class="lista">
+        <table>
+            <thead>
+              <tr>
+                  <th>MATRICULA</th>
+                  <th>NOME</th>
+                  <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>14492</td>
+                <td>PEDRO HENRIQUE PIRES FABIANO</td>
+                <td><a style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
+                </td>
+              </tr> 
+            </tbody>
+          </table>
+          
+    </section>
+
 </section>
