--- a/src/app/components/funcionarios/list-funcionarios/list-funcionarios.component.html
+++ b/src/app/components/funcionarios/list-funcionarios/list-funcionarios.component.html
@@ -3,21 +3,21 @@
   
     <H4 style="color: white; text-align: left;">Lista de Empresas</H4>
     <button [routerLink]="'/cadastros'" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
-    <br><br>
+    
     <section class="lista">
         <table>
             <thead>
               <tr>
                   <th>MATRICULA</th>
                   <th>NOME</th>
-                  <th></th>
+                  <th><a id="add"  [routerLink]="['/CadFuncionario']" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a></th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>14492</td>
                 <td>PEDRO HENRIQUE PIRES FABIANO</td>
-                <td><a style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
+                <td><a [routerLink]="['/DetalhesFuncionario']" style="margin-right: 5px;"  class="waves-effect waves-light btn"><i class="material-icons center">edit</i></a>
                 </td>
               </tr> 
             </tbody>
