--- a/src/app/components/clientes/cad-cliente/cad-cliente.component.html
+++ b/src/app/components/clientes/cad-cliente/cad-cliente.component.html
@@ -1,3 +1,67 @@
-<section id="meio">
+<section id="meio" >
+    <H3 style="color: white ; text-align: left;">Cadastrar Cliente</H3>
+  <div id="myform">
+    <form id="form" method="post" (ngSubmit)="onSubmit()" [formGroup]="formulario">
+      <div class="form-group">
 
+        <div class="row">
+          <div class="col">
+            <label  for="codigo" >Código</label>
+            <input  formControlName="codigo" class="form-control" type="text" id="codigo" name="codigo"  >
+          </div>
+          <div class="col">
+            <label for="nome">Nome</label>
+            <input formControlName="nome" class="form-control" id="nome" type="text" name="nome" >
+          </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <label for="cpf">CPF</label>
+                <input formControlName="cpf" class="form-control" id="cpf" type="text" name="cpf">
+            </div>
+            <div class="col">
+                <label for="nascimento">Data Nascimento</label>
+                <input formControlName="nascimento" class="form-control" id="nascimento" type="date" name="nascimento">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <label for="endereco">Endereço</label>
+                <input formControlName="endereco" class="form-control" id="endereco" type="text" name="endereco">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <label for="telefone">Telefone</label>
+                <input formControlName="telefone" class="form-control" id="telefone" type="text" name="telefone" placeholder="(99)99999-9999">
+            </div>
+            <div class="col">
+                <label for="email">E-mail</label>
+                <input formControlName="email" class="form-control" id="email" type="text" name="email" placeholder="nome@mail.com">
+            </div>
+        </div>
+
+        <H3 style="color: white ; text-align: left;">Cadastrar Veículo</H3>
+        <div class="row">
+            <div class="col">
+                <Label for="placa">Placa</Label>
+                <input formControlName="placa" class="form-control" id="placa" type="password" name="placa">
+            </div>
+        </div>
+
+       </div>
+
+        <button [disabled]="formulario.invalid" class="btn btn-primary" type="submit">Gravar
+          <i class="material-icons right">check</i>
+        </button>
+
+        <button [routerLink]="'/cadastros'" style="background-color: rgb(224, 59, 59); margin-left: 5px;" class="btn waves-effect waves-light">Cancelar
+          <i class="material-icons right">cancel</i>
+        </button>
+
+      </form>
+    </div>
 </section>
