--- a/src/app/components/cadastrar-ticket/cadastrar-ticket.component.css
+++ b/src/app/components/cadastrar-ticket/cadastrar-ticket.component.css
@@ -1,18 +1,55 @@
-
 #myform{
-    background-color: rgba(54,54,54);
-      width: 80%;
-      left: 10%;
-      right: 50%;
-    
-    position:relative;
+  
+  width: 90%;
+  margin: auto;
+
+}
+
+
+.col{
+  display: flex;
+  flex-direction: column;
+}
+
+#placa, #empresa, #email{
+  width: 280px;
+}
+
+label{
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.form-group .row .col input{
+  background-color: white;
+  border-radius: 5px;
+  color: black;
+  border: 3px solid white;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+}
+
+button{
+  margin-left: 11px;
+}
+
+@media (min-width:768px){
+
+  #myform{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start ;
+  }  
+
+}
+
+@media (max-width: 650px){
+
+  .form-group .row .col input{
+    width: 280px;
   }
-  
-    input{
-      color: white;
-    }
-  
-    label{
-      color: white;
-      font-size: 15px;
-    }
+
+}
