--- a/src/app/components/cadastrar-ticket/cadastrar-ticket.component.html
+++ b/src/app/components/cadastrar-ticket/cadastrar-ticket.component.html
@@ -1,15 +1,14 @@
 <section id="meio" >
     <H3 style="color: white ; text-align: left;">Cadastrar Ticket</H3>
-  <div id="myform">
-    <form id="form" method="post" (ngSubmit)="onSubmit()" [formGroup]="formulario">
-        
-          <div class="form-group">
-            <div class="row">
-              <div class="col s6 m3">
+    <div id="myform">
+      <form id="form" method="post" (ngSubmit)="onSubmit()" [formGroup]="formulario">
+        <div class="form-group">
+          <div class="row">
+            <div class="col">
                <label  for="entrada" >Hora Entrada</label>
                 <input  formControlName="entrada" class="form-control" type="time"  name="entrada"  >
               </div>
-              <div class="col s6 m3">
+              <div class="col">
                 <label for="tipocliente">Mensalista ?</label>
                 <input formControlName="tipocliente" class="form-control" id="tipocliente" type="checkbox" name="tipocliente" >
                 <div>
@@ -17,24 +16,20 @@
                   <button type = "submit"> nâo </button>
                 </div>
               </div>
-            </div>
           </div>
-          <div class="form-group">
             <div class="row">
-              <div class="col s6 m3">
+              <div class="col">
                 <label for="placa">Placa</label>
                 <input formControlName="placa" class="form-control"  id="placa" type="text"  name="placa" >
             </div>
             </div>
-          </div>
-          <div class="form-group">
             <div class="row">
-              <div class="col s6 m5">
+              <div class="col">
                 <label for="veiculo">Tipo veiculo</label> 
                 <input formControlName="veiculo" class="form-control"  id="veiculo" type="text"   name="veiculo">  
               </div>
             </div>
-          </div>
+        </div>
 
         <button [disabled]="formulario.invalid" class="btn btn-primary" type="submit">Gravar
           <i class="material-icons right">check</i>
