--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -3,29 +3,31 @@
     <br>
     <button [routerLink]="''" class="btn waves-effect waves-light" type="submit" name="action">Voltar<i class="material-icons left">arrow_back</i></button>
       <br><br>
+      <div class="form-group">
       <div class="row">
-          <div class="col s8 m3"> 
-            <div class="card blue-grey">
+          <div class="col"> 
+            <div class="card">
               <div class="card-action white-text">
                 <a routerLink="/cadticket">Abrir Ticket</a>
               </div>
             </div>
           </div>
-         
-          <div class="col s8 m3"> 
-            <div class="card blue-grey">
+          <div class="col"> 
+            <div class="card">
               <div class="card-action white-text">
                 <a routerLink="/detalhesticket">Consultar Ticket</a>
               </div>
             </div>
           </div>
-          <div class="col s8 m3"> 
-            <div class="card blue-grey">
+          <div class="col"> 
+            <div class="card">
               <div class="card-action white-text">
                 <span class="card-action"><a href="#">Encerrar ticket</a></span>
               </div>
             </div>
           </div>
+      </div>
+      
   
   
             
