--- a/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
+++ b/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
@@ -27,9 +27,31 @@
         </div>
 
         <div class="row">
+           <div class="col">
+               <label for="cep">CEP</label>
+               <input formControlName="cep" class="form-control" id="cep" type="text" name="cep">
+           </div>
+        </div>
+
+        <div class="row">
             <div class="col">
-                <label for="endereco">Endereço</label>
-                <input formControlName="endereco" class="form-control" id="endereco" type="text" name="endereco">
+                <label for="logradouro">Logradouro</label>
+                <input formControlName="logradouro" class="form-control" id="logradouro" type="text" name="logradouro">
+            </div>
+            <div class="col">
+                <label for="complemento">Complemento</label>
+                <input formControlName="complemento" class="form-control" id="complemento" type="text" name="complemento">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <label for="cidade">Cidade</label>
+                <input formControlName="cidade" class="form-control" id="cidade" type="text" name="cidade">
+            </div>
+            <div class="col">
+                <label for="estado">Estado</label>
+                <input formControlName="estado" class="form-control" id="estado" type="text" name="estado">
             </div>
         </div>
 
