--- a/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
+++ b/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
@@ -29,7 +29,9 @@
         <div class="row">
            <div class="col">
                <label for="cep">CEP</label>
+               <span hidden style="color: red;" #valido>  CEP INVALIDO!</span>
                <input formControlName="cep" class="form-control" id="cep" type="text" name="cep">
+               
            </div>
         </div>
 
