so o pedro faz aqui

--- a/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.css
+++ b/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.css
@@ -25,6 +25,9 @@
     width: 570px;
     text-transform: uppercase;
   }
+  #matricula{
+    text-align: center;
+  }
 
   #email{
     width: 360px;
