--- a/src/app/components/cadastros/cadastros.component.html
+++ b/src/app/components/cadastros/cadastros.component.html
@@ -5,8 +5,7 @@
       <div class="card">
         <span>Empresa</span>
         <div class="card-action">
-          <a routerLink="/cadEmpresa">Cadastrar</a>
-          <a routerLink="/listarempresas">Listar</a>
+          <a routerLink="/cadEmpresa">Cadastrar / Alterar</a>
         </div>
       </div>
       <div class="card" hidden>
