Meu pai é branco

--- a/src/app/components/tickets-home/tickets-home.component.html
+++ b/src/app/components/tickets-home/tickets-home.component.html
@@ -22,7 +22,7 @@
           <div class="col"> 
             <div class="card">
               <div class="card-action white-text">
-                <span class="card-action"><a href="#">Encerrar ticket</a></span>
+                <a href="#">Encerrar ticket</a>
               </div>
             </div>
           </div>
