--- a/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
+++ b/src/app/components/funcionarios/cad-funcionario/cad-funcionario.component.html
@@ -30,7 +30,7 @@
            <div class="col">
                <label for="cep">CEP</label>
                <span hidden style="color: red;" #valido>  CEP INVALIDO!</span>
-               <input  ([ngModel])="cep" (ngModelOnChance)="buscaCep" formControlName="cep" class="form-control" id="cep" type="text" name="cep">
+               <input  ([ngModel])="cep" formControlName="cep" class="form-control" id="cep" type="text" name="cep">
             </div>
         </div>
 
